# Changelog

All changes of DMT starting from version 1.3.0 will be documented in this file. A breaking change of DMT is defined as a change in one of the test cases for the core modules. If the API changes there, the MAJOR version has to be increased.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/), and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [1.4.0] -

### Added

- Documentation for DMT.external library.

### Move

- Moved DMT.verilogae.helpers into DMT.external.verilogae. THis is more fitting.
- Moved vectorize, check_nan_inf and memoize to extraction.model

### Removed

- Removed DMT.core.tikz_postprocess. Currently no final implementation and also no integration with pyqtgraph. This feature will return with pyqtgraph integration and better documentation! No major bump as it was not part of test cases.
- Removed is_iterable, flatten and strictly_increasing

## [1.3.0] - 2022.02.25

### Added

- Added ```__version__``` attribute and use it in setup.py
- Added ```_Excluded``` class to correctly implement the Verilog-AMS standard
- Added a test case for DMT.verilogae.helpers.get_param_list
- Added McParameterCollection to replace the deprecated McParameterComposition

### Changed

- renamed load_model method of MCard to load_model_parameters to better reflect what the method does.
- removed data_processor and data_reader pyx files and pyx import. The speed up is not worth the effort of two files to maintain.

### Move

- Moved the core in its own repository to protect proprietary data in the full repository

### Deprecated

- McParameterComposition is deprecated. Its name can be confusing because of the composition design pattern.