@@ -14,6 +14,7 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 
 - Moved DMT.verilogae.helpers into DMT.external.verilogae. THis is more fitting.
 - Moved vectorize, check_nan_inf and memoize to extraction.model
+- Moved SI_UNITS_CONVERTER, resolve_siunitx and tex_to_label from core.utils to external.latex
 
 ### Removed
 
